# xskill

./: .gitignore  AGENTS.md  Intro.md  README.md  bugfix.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
.github/workflows/: ci.yml  release.yml  sync-marketplace.yml
docs/: 01_vision_and_guide.md  02_requirements.md  03_architecture_and_cicd.md  04_competitor_analysis.md  05_skill_management_redesign.md  README.md  requirements_v0.3.md  supported-agents.md  快速参考.md  文档结构说明.md
docs/development/: 01_cli_guide.md
docs/requirements/: 01_vision_and_guide.md  02_requirements.md  03_architecture_and_cicd.md  06_competitor_analysis_v0.3.0.md  07_complete_requirements.md
docs/test_cases/: 01_frontend_cases.md  01_tauri_e2e_cases.md  02_backend_unit_cases.md  03_backend_integration_cases.md  04_suite_sync_cases.md  04_user_scenario_cases.md  05_template.md  README.md
public/data/: marketplace.json
scripts/recordings/: test-summary-20260228_185711.txt
src/: App.test.tsx  App.tsx  index.css  setupTests.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  config_manager.rs  crawler.rs  feed_parser.rs  fingerprint.rs  git_manager.rs  github.rs  ide_sync.rs  integration_tests.rs  lib.rs  main.rs  onboarding.rs  scaffold.rs  scanner.rs  skill_manager.rs  store.rs  suite_applier.rs  suite_manager.rs  test_logger.rs  utils.rs
src/components/: ApplySkillsDialog.tsx  ApplySuiteDialog.tsx  HubPage.test.tsx  HubPage.tsx  ManageProjectSkillsDialog.test.tsx  ManageProjectSkillsDialog.tsx  MarketplacePage.test.tsx  MarketplacePage.tsx  MySkillsPage.tsx  NewSkillDialog.tsx  ProjectsPage.tsx  (+7 more)
tasks/: lessons.md  session-management-best-practices.md  todo.md
website/: README.md  package-lock.json  package.json  tailwind.config.js
(+27 files in other folders)
