[package]
name = "xskill"
version = "0.2.3"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "xskill_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2.0.0"
dirs = "6.0.0"

tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-store = "2.0.0"
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.49.0", features = ["full"] }
walkdir = "2"
sha2 = "0.10.8"
