[package]
name = "xskill"
version = "0.3.6"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "xskill_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
dirs = "6.0.0"

tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.49.0", features = ["full"] }
walkdir = "2"
sha2 = "0.10.8"
uuid = { version = "=1.11.0", features = ["v4", "serde"] }
tempfile = "=3.10.1"
security-framework = "=2.11.1" 
native-tls = "=0.2.11"
time = "=0.3.36"
url = "=2.5.0"
open = "5.3.3"



